# SecretVoldemortWeb

./: .gitignore  CMakeLists.txt  README.md  generate_steps.py  schema.json  start_server.bat  start_server.sh
Client/: index.html  package-lock.json  package.json  vite.config.js
Client/Src/: App.jsx  Test.jsx  index.css  theme.js
Client/Src/components/: ActionPopup.jsx  DebugPage.jsx  GamePage.jsx  HomePage.jsx  PageDots.jsx  PopupOverlay.jsx
Client/Src/components/game/: BottomBar.jsx  Chatbox.css  Chatbox.jsx  ElectionTrack.jsx  GameBoard.jsx  LawTrack.jsx  PileTrack.jsx  PlayerList.jsx  PowerTrack.jsx  RolePanel.jsx
Client/Src/constants/: steps.js
Client/Src/context/: GameContext.jsx
Client/Src/hooks/: useSounds.js  useWebSocket.js
Server/Src/: GameController.cpp  GameController.hpp  GameStatus.hpp  GameTools.cpp  GameTools.hpp  Logger.hpp  Server.cpp  Server.hpp  main.cpp  random.hpp
